service-mesh/yamls/auth-proxy/auth-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauthproxy-service
  namespace: auth-proxy
spec:
  hosts:
  - "auth.gw.mesh.onap.eu"
  gateways:
  - auth-gateway
  http:
  - route:
    - destination:
        port:
          number: 4180
        host: oauthproxy-service.auth-proxy.svc.cluster.local
